[gd_scene load_steps=14 format=2]

[ext_resource path="res://states/game/GameState.gd" type="Script" id=1]
[ext_resource path="res://states/game/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://states/game/PauseMenu.gd" type="Script" id=3]
[ext_resource path="res://states/game/InGame.gd" type="Script" id=4]
[ext_resource path="res://scenes/actors/player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Game.gd" type="Script" id=6]
[ext_resource path="res://scenes/level/Level.tscn" type="PackedScene" id=7]
[ext_resource path="res://MainCamera.gd" type="Script" id=8]
[ext_resource path="res://scenes/actors/enemy/Bat.tscn" type="PackedScene" id=9]
[ext_resource path="res://library/common/Joystick.tscn" type="PackedScene" id=10]
[ext_resource path="res://Stage.gd" type="Script" id=11]
[ext_resource path="res://scenes/actors/enemy/SkeletonArcher.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/level/Exit.tscn" type="PackedScene" id=13]

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="GameState" type="Node" parent="."]
script = ExtResource( 1 )

[node name="InGame" type="Node" parent="GameState"]
script = ExtResource( 4 )

[node name="MainMenu" type="Node" parent="GameState"]
script = ExtResource( 2 )

[node name="PauseMenu" type="Node" parent="GameState"]
script = ExtResource( 3 )

[node name="Stage" type="Node2D" parent="."]
script = ExtResource( 11 )
__meta__ = {
"_editor_description_": "Landing Zone for Game Objects (Actors, Objects, Levels)"
}

[node name="Level" parent="Stage" instance=ExtResource( 7 )]
formation_set_enemies = [ ExtResource( 9 ), ExtResource( 12 ) ]
formation_set_rates = [ 0.25, 0.1 ]

[node name="Exit" parent="Stage/Level/map" index="1" instance=ExtResource( 13 )]
position = Vector2( 509, 148 )

[node name="SkeletonArcher" parent="Stage/Level/map" index="2" instance=ExtResource( 12 )]
position = Vector2( 313, 179 )

[node name="Player" parent="Stage/Level/map" index="3" instance=ExtResource( 5 )]
position = Vector2( 111, 376 )

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 362, 739 )
current = true
zoom = Vector2( 0.9, 0.9 )
smoothing_enabled = true
script = ExtResource( 8 )

[node name="UI" type="CanvasLayer" parent="MainCamera"]

[node name="Joystick" parent="MainCamera/UI" instance=ExtResource( 10 )]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( 364, 738 )
scale = Vector2( 0.5, 0.5 )

[node name="Label" type="Label" parent="MainCamera/UI"]
margin_left = 9.0
margin_top = 7.0
margin_right = 49.0
margin_bottom = 21.0
text = "HP: 1"

[node name="ExitLabel" type="Label" parent="MainCamera/UI"]
margin_left = 61.0
margin_top = 7.0
margin_right = 101.0
margin_bottom = 21.0
text = "HP: 1"

[node name="Timer" type="Label" parent="MainCamera/UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 6.0
margin_bottom = 20.0
text = "01:22"

[editable path="Stage/Level"]
[editable path="Stage/Level/map"]
